@@ -3,8 +3,10 @@
 //
 // Authors:
 //	Daniel Abramov <ex@vingrad.ru>
+//	Sebastien Pouliot <sebastien@ximian.com>
 //
-// 	(C) 2007 Daniel Abramov
+// (C) 2007 Daniel Abramov
+// Copyright (C) 2008 Novell, Inc (http://www.novell.com)
 //
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
@@ -30,7 +32,9 @@ using System;
 using System.Collections.Generic;
 
 using Mono.Cecil;
+
 using Gendarme.Framework;
+using Gendarme.Framework.Rocks;
 
 namespace Gendarme.Rules.Naming {
 
@@ -39,59 +43,70 @@ namespace Gendarme.Rules.Naming {
 		// check if name is PascalCased
 		private static bool IsPascalCase (string name)
 		{
-			if (name == null || name.Length == 0) {
+			if (String.IsNullOrEmpty (name))
 				return true;
-			}
+
 			return Char.IsUpper (name [0]);
 		}
 
 		// convert name to PascalCase
 		private static string PascalCase (string name)
 		{
-			if (name == null || name.Length == 0) {
-				return name;
-			}
-			if (name.StartsWith ("_"))
-				RemoveLeadingUnderlines (ref name);
-			return Char.ToUpper (name [0]) + name.Substring (1);
+			if (String.IsNullOrEmpty (name))
+				return String.Empty;
+
+			if (name.Length == 1)
+				return name.ToUpperInvariant ();
+
+			int index = IndexOfFirstCorrectChar (name);
+			return Char.ToUpperInvariant (name [index]) + name.Substring (index + 1);
 		}
 
 		// check if name is camelCased
 		private static bool IsCamelCase (string name)
 		{
-			if (name == null || name.Length == 0) {
+			if (String.IsNullOrEmpty (name))
 				return true;
-			}
+
 			return Char.IsLower (name [0]);
 		}
 
 		// convert name to camelCase
 		private static string CamelCase (string name)
 		{
-			if (name == null || name.Length == 0) {
-				return name;
-			}
-			if (name.StartsWith ("_"))
-				RemoveLeadingUnderlines (ref name);
-			return Char.ToLower (name [0]) + name.Substring (1);
+			if (String.IsNullOrEmpty (name))
+				return String.Empty;
+
+			if (name.Length == 1)
+				return name.ToLowerInvariant ();
+
+			int index = IndexOfFirstCorrectChar (name);
+			return Char.ToLowerInvariant (name [index]) + name.Substring (index + 1);
 		}
 
-		private static void RemoveLeadingUnderlines (ref string s)
+		private static int IndexOfFirstCorrectChar (string s)
 		{
-			int idx = 0;
-			while ((s [idx] == '_') && (s.Length > 1))
-				idx++;
-			s = s.Substring (idx);
+			int index = 0;
+			while ((index < s.Length) && (s [index] == '_'))
+				index++;
+			// it's possible that we won't find one, e.g. something called "_"
+			return (index == s.Length) ? 0 : index;
 		}
-
 
 		public MessageCollection CheckType (TypeDefinition typeDefinition, Runner runner)
 		{
-			// types should all be PascalCased
-			if (IsPascalCase (typeDefinition.Name))
+			// rule does not apply to generated code (outside developer's control)
+			if (typeDefinition.IsGeneratedCode ())
 				return runner.RuleSuccess;
 
-			if (NamingUtils.IsNameGeneratedByCompiler (typeDefinition))
+			// <Module> isn't tagged as generated by the compiler but still must be ignored
+			if (typeDefinition.Name == Constants.ModuleType)
+				return runner.RuleSuccess;
+
+			// ok, rule applies
+
+			// types should all be PascalCased
+			if (IsPascalCase (typeDefinition.Name))
 				return runner.RuleSuccess;
 
 			Location location = new Location (typeDefinition);
@@ -102,6 +117,9 @@ namespace Gendarme.Rules.Naming {
 
 		public MessageCollection CheckMethod (MethodDefinition methodDefinition, Runner runner)
 		{
+			if (methodDefinition.IsConstructor)
+				return runner.RuleSuccess;
+
 			string name = methodDefinition.Name;
 			MethodSemanticsAttributes attrs = methodDefinition.SemanticsAttributes;
 			MethodSemanticsAttributes mask = MethodSemanticsAttributes.Getter | MethodSemanticsAttributes.Setter
@@ -111,18 +129,18 @@ namespace Gendarme.Rules.Naming {
 				int underscore = methodDefinition.Name.IndexOf ('_');
 				if (underscore != -1)
 					name = name.Substring (underscore + 1);
-			} else if (NamingUtils.IsNameGeneratedByCompiler (methodDefinition)) {
+			} else if (methodDefinition.IsSpecialName || methodDefinition.IsGeneratedCode ()) {
 				return runner.RuleSuccess;
 			}
 
-			MessageCollection messages = new MessageCollection ();
+			MessageCollection messages = null;
 			Location location = new Location (methodDefinition);
 
 			// like types, methods/props should all be PascalCased, too
 			if (!IsPascalCase (name)) {
 				string errorMessage = string.Format ("By existing naming conventions, all the method and property names should all be pascal-cased (e.g. MyOperation). Rename '{0}' to '{1}'.",
 								     name, PascalCase (name));
-				messages.Add (new Message (errorMessage, location, MessageType.Error));
+				messages = new MessageCollection (new Message (errorMessage, location, MessageType.Error));
 			}
 			// check parameters
 			List<string> parameterNames = new List<string> ();
@@ -133,13 +151,14 @@ namespace Gendarme.Rules.Naming {
 			foreach (string param in parameterNames) {
 				// params should all be camelCased
 				if (!IsCamelCase (param)) {
+					if (messages == null)
+						messages = new MessageCollection ();
+
 					string errorMessage = string.Format ("By existing naming conventions, the parameter names should all be camel-cased (e.g. myParameter). Rename '{0}' parameter to '{1}'.",
 										param, CamelCase (param));
 					messages.Add (new Message (errorMessage, location, MessageType.Error));
 				}
 			}
-			if (messages.Count == 0)
-				return runner.RuleSuccess;
 
 			return messages;
 		}
